Fix mobile footer waveform display
The footer waveform on small screens (possibly just mobile safari?)
displays the whole graphic, instead of just the top of the waveform as
desired.

Also, the graphic is shrunken down to be the size to the view port
width, making the effect harder to track.

Cut off overflowing parts of the waveform instead of shrinking the
entire graphic to fit, which keeps the effect readable.

Add a cute hover effect for each beam.

--- a/style.css
+++ b/style.css
@@ -1058,8 +1058,11 @@ textarea {
 
 .site-footer__graphic {
 	display: block;
-	min-height: 10em;
-	margin-top: 5em;
+	width: 1920px;
+}
+
+.site-footer__graphic path:hover {
+	stroke: limegreen;
 }
 
 .site-footer__menu ul {
